
syntax = "proto3";
option go_package = "github.com/coder/coder/v2/inteld/proto";

package inteld;

message Empty {}

message Executable {
	string hash = 1;
	string basename = 2;
	string path = 3;
	// Version is a per-tool extracted version string.
	// e.g. go1.26.4
	string version = 4;
}

// Invocation is a message that represents a single invocation of an executable.
message Invocation {
	Executable executable = 1;
	repeated string arguments = 2;
	int64 started_at = 3;
	int64 finished_at = 4;
	int32 exit_code = 5;
	string working_directory = 6;
	string git_remote_url = 7;
}

message ReportPathRequest {
	repeated Executable executables = 1;
}

message RecordInvocationRequest {
	repeated Invocation invocations = 1;
}

message InstalledSoftware {
	bool docker_desktop = 1;
	bool docker_desktop_enterprise = 2;
	bool vscode = 3;
	bool vscode_insiders = 4;
	bool jetbrains_intellij = 5;
	bool jetbrains_gateway = 6;
}

message RegisterRequest {
	string hostname = 1;
	// GOOS
	string operating_system = 2;
	string operating_system_version = 3;
	uint32 cpu_cores = 4;
	uint64 memory_total = 5;
	// GOARCH
	string architecture = 6;
	string git_config_email = 7;
	string git_config_name = 8;
	InstalledSoftware installed_software = 9;
}

// SystemResponse is a message that the client streams to
// the daemon. It notifies of new tracking requests.
message SystemResponse {
	oneof message {
		TrackExecutables track_executables = 1;
	}
}

// TrackExecutables is a message that tells the daemon to track
// the executables with the given names.
message TrackExecutables {
	repeated string binary_name = 1;
}

// IntelDaemon is the daemon interface that communicates
// with coderd.
service IntelDaemon {
	// Register must be sent before any other message.
	// If the system is not registered, all other messages will
	// fail with errors.
	rpc Register(RegisterRequest) returns (stream SystemResponse);

	rpc RecordInvocation(RecordInvocationRequest) returns (Empty);
	rpc ReportPath(ReportPathRequest) returns (Empty);
}

// Client messages!

message ReportInvocationRequest {
	string executable_path = 1;
	repeated string arguments = 2;
	int64 started_at = 3;
	int64 finished_at = 4;
	int32 exit_code = 5;
	string working_directory = 6;
}

// IntelClient is provided by inteld to clients that want
// to report insights. Clients report through the daemon
// to ensure that the insights are stored and processed
// in a consistent and timely manner.
service IntelClient {
	rpc ReportInvocation(ReportInvocationRequest) returns (Empty);
}
